Bug 15097 - testparm: Fix typo in idmap rangesize check
Summary: testparm: Fix typo in idmap rangesize check
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.16.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-15 13:41 UTC by Andreas Schneider
Modified: 2022-07-18 11:18 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.16 (1.03 KB, patch)
2022-06-15 13:42 UTC, Andreas Schneider
ab: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2022-06-15 13:41:30 UTC
Fix typo in idmap rangesize check
Comment 1 Andreas Schneider 2022-06-15 13:42:47 UTC
Created attachment 17355 [details]
patch for 4.16
Comment 2 Alexander Bokovoy 2022-06-15 13:44:46 UTC
Comment on attachment 17355 [details]
patch for 4.16

LGTM
Comment 3 Andreas Schneider 2022-06-15 13:56:30 UTC
Jule, please add the patch to the next 4.16 release. Thanks!
Comment 4 Jule Anger 2022-06-18 08:43:29 UTC
Pushed to autobuild-v4-16-test.
Comment 5 Samba QA Contact 2022-06-18 09:56:11 UTC
This bug was referenced in samba v4-16-test:

a9f87b9278e89c626c34c000af12559f33c1fd80
Comment 6 Jule Anger 2022-06-18 09:59:11 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2022-07-18 11:18:50 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.3):

a9f87b9278e89c626c34c000af12559f33c1fd80